--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,22 +1,34 @@
-# networks:
-#   inception:
+version: "3"
 
-# volume:
-#   mariadbvol:
-#     driver: local
-#     driver_opts:
-#       type: none
-#       o: bind
-#       device: /home/username/mariadb
-version: '3'
+networks:
+  inception:
+    name: inception
 
 services:
   nginx:
     container_name: nginx
-    build: ./requirements/nginx
+    build: ./requirements/nginx/.
     ports:
       - "443:443"
-    # networks:
-    #   - inception
-
+    networks:
+      - inception
+    env_file:
+      - .env
+    restart: on-failure
+    # restart: always
+  # wordpress:
+  #   container_name: wordpress
+  #   build: ./requirements/wordpress/.
+  #   networks:
+  #     - inception
+  #   env_file:
+  #     - .env
+  #   restart: always
   # mariadb:
+  #   container_name: mariadb
+  #   build: ./requirements/mariadb/.
+  #   networks:
+  #     - inception
+  #   env_file:
+  #     - .env
+  #   restart: always
