--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,9 @@
 FROM debian:buster
 
-RUN apt-get update && apt-get install -y nginx openssl
+RUN apt-get update -y && apt-get install -y nginx openssl
 
 COPY ./tools/setup.sh /
+
+RUN chmod +x /setup.sh
 
 CMD ["/setup.sh"]
