--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,40 +1,23 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+# Empty for default settings ( max num of concurrent connections, multi-thread settings, etc. )
+events {}
 
 http {
-	server {
-		listen 442 ssl;
-		root /var/www/html;
+	include /etc/nginx/mime.types;
 
+	server {
+		listen 443 ssl;
+
+		ssl_certificate  /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		ssl_protocols TLSv1.3;
+
+		root /var/www/wordpress;
+		server_name $DOMAIN_NAME;
 		index index.php;
 
-		location ~ \.php$ {
-			fastcgi_pass wordpress:9000;
-			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-			fastcgi_index index.php;
-			include /etc/nginx/fastcgi_params;
+		location ~ \.php$ { # the location of the php files
+			include snippets/fastcgi-php.conf; # the configuration file for the fastcgi
+			fastcgi_pass wordpress:9000; # the address of the fastcgi server
 		}
 	}
-
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 65;
-	types_hash_max_size 2048;
-
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
-
-	ssl_protocols TLSv1.3;
-	ssl_prefer_server_ciphers on;
-
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
-
-	gzip on;
-
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
 }
