--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   mariadb:
     image: mariadb:user
     container_name: maraidb
-    build: ./mariadb
+    build: ./requirements/mariadb
     volumes:
       - mariadb:/var/lib/mysql
     env_file:
@@ -17,7 +17,7 @@ services:
   nginx:
     image: nginx:user
     container_name: nginx
-    build: ./nginx
+    build: ./requirements/nginx
     ports:
       - "443:443"
     depends_on:
@@ -31,7 +31,7 @@ services:
   wordpress:
     image: wordpress:user
     container_name: wordpress
-    build: ./wordpress
+    build: ./requirements/wordpress
     depends_on:
       - mariadb
     volumes:
@@ -52,13 +52,13 @@ volumes:
       o: bind
       type: none
     
-    wordpress:
-      name: wordpress
-      driver: lcal
-      driver_opts:
-        device: /home/data/wordpress
-        o: bind
-        type: none
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      device: /home/data/wordpress
+      o: bind
+      type: none
 
 networks:
   inception:
