--- a/srcs/.env
+++ b/srcs/.env
@@ -1,18 +1,17 @@
 # MYSQL SETUP
-MYSQL_DB=database_name # database name
-MYSQL_USER=database_user # database user
-MYSQL_PASSWORD=database_user_password # database user password
-MYSQL_ROOT_PASSWORD=root_password # root password
+MYSQL_DB=Daidabess # database name
+MYSQL_USER=Userman # database user
+MYSQL_PASSWORD=Password1! # database user password
+MYSQL_ROOT_PASSWORD=RootPassword1! # root password
 
 # WP SETUP
-DOMAIN_NAME=domain_name.fr # domain name of the website
-WP_ADMIN_N=admin_name # admin name
-WP_ADMIN_P=admin_password # admin password
-WP_TITLE=website_title # website title
-WP_ADMIN_E=admin_@email.com # admin email
+DOMAIN_NAME=hwong.42.fr # domain name of the website
+WP_ADMIN_N=wpn # admin name
+WP_ADMIN_P=RootPassword1! # admin password
+WP_TITLE=Inception # website title
+WP_ADMIN_E=wpn@email.com # admin email
 
 # WP NEW USER SETUP
-WP_U_NAME=user_name # user name of the new user
-WP_U_PASS=user_password # user password
-WP_U_ROLE=author # author, editor, Administrator ...
-WP_U_EMAIL=user_@email.com # user email
+WP_U_NAME=sexhaver69 # user name of the new user
+WP_U_PASS=Password1! # user password
+WP_U_EMAIL=sexhaver69@email.com # user email
