--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -12,7 +12,7 @@ http {
 		ssl_protocols TLSv1.3;
 
 		root /var/www/wordpress;
-		server_name $DOMAIN_NAME;
+		server_name hwong.42.fr;
 		index index.php;
 
 		location ~ \.php$ { # the location of the php files
