--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,5 +7,7 @@ RUN apt-get install -y mariadb-server
 COPY conf/mdb-conf.sh /
 RUN chmod +x /mdb-conf.sh
 
+EXPOSE 3306
+
 # Since the script is now in container root, just specify it is in root (.)
 ENTRYPOINT ["./mdb-conf.sh"]
